[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/UI/ChatBox.gd" type="Script" id=1]

[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
text = "Send a message: "

[node name="InputBox" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Enter to send."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/InputBox" to="." method="_on_InputBox_text_entered"]
